src/objects/ACCL__Tactic_Condition_Creation_Definition__c.object
<CustomObject>
    <description>Holds the details of tactic condition creation definition.</description>
    <fields>
        <fullName>ACCL__Additional_KPI_Definition_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the KPI definition used to provide additional information for the condition.</description>
        <label>Additional KPI Definition 1</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions (Additional KPI Definition 1)</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Additional_KPI_Definition_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the KPI definition used to provide additional information for the condition.</description>
        <label>Additional KPI Definition 2</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions (Additional KPI Definition 2)</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Additional_KPI_Definition_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the KPI definition used to provide additional information for the condition.</description>
        <label>Additional KPI Definition 3</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions (Additional KPI Definition 3)</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Allowed_Product_Levels__c</fullName>
        <description>Defines the eligible product levels when determining automatically the product levels on condition generation.</description>
        <inlineHelpText>Defines the eligible product levels when determining automatically the product levels on condition generation.</inlineHelpText>
        <label>Allowed Product Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                    <label>Sub Category</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                    <label>Sub Brand</label>
                </value>
                <value>
                    <fullName>Package</fullName>
                    <label>Product Price Group</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Change_Rule__c</fullName>
        <description>Determines the rule to handle past conditions.</description>
        <label>Change Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>update</fullName>
                    <label>Update</label>
                </value>
                <value>
                    <fullName>finish</fullName>
                    <default>true</default>
                    <label>Finish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Check_For_Duplicates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines, whether the system reports generated internal conditions conflicting with pre existing conditions.</description>
        <label>Check For Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Maintenance__c</fullName>
        <description>Defines the action on the conditions generated by the tactic.</description>
        <label>Maintenance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>upsert</fullName>
                    <label>Upsert</label>
                </value>
                <value>
                    <fullName>delete</fullName>
                    <label>Delete</label>
                </value>
                <value>
                    <fullName>freeze</fullName>
                    <label>Freeze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Measure_Code__c</fullName>
        <description>Measure Code of the Condition</description>
        <label>Measure Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_TCCD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent TCCD</label>
        <referenceTo>ACCL__Tactic_Condition_Creation_Definition__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Level__c</fullName>
        <description>Defines the product group level at which the condition is generated.</description>
        <label>Product Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                    <label>Sub Category</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                    <label>Sub Brand</label>
                </value>
                <value>
                    <fullName>Package</fullName>
                    <label>Product Price Group</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Source_KPI_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the KPI definition which is used as the source for generating condition.</description>
        <label>Source KPI Definition</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Tactic__c</fullName>
        <description>Tactic for which the rule is defined.</description>
        <label>Tactic</label>
        <referenceTo>ACCL__Tactic__c</referenceTo>
        <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
        <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Targets__c</fullName>
        <description>Defines the targets to which the conditions are written.</description>
        <label>Targets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Unique_Measure_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains concatenation of tactic Id and source KPI definition Editable Code</description>
        <label>Unique Measure Name</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tactic Condition Creation Definition</label>
    <nameField>
        <displayFormat>TCCD-{0000}</displayFormat>
        <label>Tactic Condition Creation Def Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Condition Creation Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__AdditionalKPIs_CompatibleToProductLevel</fullName>
        <active>true</active>
        <description>The BOM Scope of Additional KPI Definition must contain ‘Component’ if Product Level is ‘Component’.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(ACCL__Product_Level__c, &apos;Component&apos;),
    OR(
        AND(
            NOT(INCLUDES(ACCL__Additional_KPI_Definition_1__r.ACCL__BoM_Scope__c, &apos;Component&apos;)),
            NOT(ISBLANK(ACCL__Additional_KPI_Definition_1__c))
        ),
        AND(
            NOT(INCLUDES(ACCL__Additional_KPI_Definition_2__r.ACCL__BoM_Scope__c, &apos;Component&apos;)),
            NOT(ISBLANK(ACCL__Additional_KPI_Definition_2__c))
        ),
        AND(
            NOT(INCLUDES(ACCL__Additional_KPI_Definition_3__r.ACCL__BoM_Scope__c, &apos;Component&apos;)),
            NOT(ISBLANK(ACCL__Additional_KPI_Definition_3__c))
        )
    )
)</errorConditionFormula>
        <errorDisplayField>ACCL__Product_Level__c</errorDisplayField>
        <errorMessage>The BOM Scope of Additional KPI Definitions must contain ‘Component’ if Product Level is ‘Component’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__BOMScope_AllowProdLvlComponentValidation</fullName>
        <active>true</active>
        <description>The BOM Scope of Source KPI Definition must contain ‘Component’ if Allowed Product Level is ‘Component’.</description>
        <errorConditionFormula>AND(
INCLUDES( ACCL__Allowed_Product_Levels__c ,&apos;Component&apos;),
NOT(INCLUDES(ACCL__Source_KPI_Definition__r.ACCL__BoM_Scope__c, &apos;Component&apos;))
)</errorConditionFormula>
        <errorDisplayField>ACCL__Allowed_Product_Levels__c</errorDisplayField>
        <errorMessage>The BOM Scope of Source KPI Definition must contain ‘Component’ if Allowed Product Level is ‘Component’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__BOMScope_AllowProdLvlProductValidation</fullName>
        <active>true</active>
        <description>The BOM Scope of Source KPI Definition must not contain ‘Component’ if Allowed Product Level is ‘Product’.</description>
        <errorConditionFormula>AND(
INCLUDES( ACCL__Allowed_Product_Levels__c ,&apos;Product&apos;),
INCLUDES(ACCL__Source_KPI_Definition__r.ACCL__BoM_Scope__c, &apos;Component&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Allowed_Product_Levels__c</errorDisplayField>
        <errorMessage>The BOM Scope of Source KPI Definition must not contain ‘Component’ if Allowed Product Level is ‘Product’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ChangeRule_NotEmpty</fullName>
        <active>true</active>
        <description>The Change Rule field can’t be empty.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Change_Rule__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ACCL__Change_Rule__c</errorDisplayField>
        <errorMessage>The Change Rule field can’t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Maintenance_NotEmpty</fullName>
        <active>true</active>
        <description>The Maintenance field can’t be empty.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Maintenance__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ACCL__Maintenance__c</errorDisplayField>
        <errorMessage>The Maintenance field can’t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Maintenance_UpdateToInitialRestricted</fullName>
        <active>true</active>
        <description>The Maintenance field cannot be updated to &apos;Initial&apos; from any other value.</description>
        <errorConditionFormula>AND(
   ISPICKVAL(ACCL__Maintenance__c , &apos;Initial&apos;),
   ISCHANGED(ACCL__Maintenance__c)
)</errorConditionFormula>
        <errorDisplayField>ACCL__Maintenance__c</errorDisplayField>
        <errorMessage>The Maintenance field cannot be updated to &apos;Initial&apos; from any other value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ProdLevel_And_BoMsCope_Component</fullName>
        <active>true</active>
        <description>BoM Scope of the Source KPI must contain &apos;Component&apos; if the product level is &apos;Component&apos;,</description>
        <errorConditionFormula>AND(
ISPICKVAL(ACCL__Product_Level__c, &apos;Component&apos;),
NOT(INCLUDES(ACCL__Source_KPI_Definition__r.ACCL__BoM_Scope__c, &apos;Component&apos;))
)</errorConditionFormula>
        <errorDisplayField>ACCL__Product_Level__c</errorDisplayField>
        <errorMessage>BoM Scope of the Source KPI must contain &apos;Component&apos; if the product level is &apos;Component&apos;,</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ProductLevel_InAvailableProductLevel</fullName>
        <active>true</active>
        <description>The Product Level must be included in the Available Product Level of the promotion template.</description>
        <errorConditionFormula>OR(
	AND(
		ISPICKVAL(ACCL__Product_Level__c, &apos;Category&apos;),
		NOT(INCLUDES(ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Available_Product_Level__c,  &apos;Category&apos; ))
	),
	AND(
		ISPICKVAL(ACCL__Product_Level__c, &apos;SubCategory&apos;),
		NOT(INCLUDES(ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Available_Product_Level__c,  &apos;SubCategory&apos; ))
	),
	AND(
		ISPICKVAL(ACCL__Product_Level__c, &apos;Brand&apos;),
		NOT(INCLUDES(ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Available_Product_Level__c,  &apos;Brand&apos; ))
	),
	AND(
		ISPICKVAL(ACCL__Product_Level__c, &apos;Flavor&apos;),
		NOT(INCLUDES(ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Available_Product_Level__c,  &apos;Flavor&apos; ))
	),
	AND(
		ISPICKVAL(ACCL__Product_Level__c, &apos;Package&apos;),
		NOT(INCLUDES(ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Available_Product_Level__c,  &apos;Package&apos; ))
	)
)</errorConditionFormula>
        <errorDisplayField>ACCL__Product_Level__c</errorDisplayField>
        <errorMessage>The Product Level must be included in the Available Product Level of the promotion template.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__SourceKPI_EditableWithTotal</fullName>
        <active>true</active>
        <description>The Source KPI Definition must have Record Type &apos;Editable&apos; and Edit Mode &apos;Total&apos;.</description>
        <errorConditionFormula>OR(
    ACCL__Source_KPI_Definition__r.RecordType.DeveloperName &lt;&gt; &apos;editable&apos;,
    NOT(ISPICKVAL(ACCL__Source_KPI_Definition__r.ACCL__Editable_Edit_Mode__c, &apos;total&apos;))
)</errorConditionFormula>
        <errorDisplayField>ACCL__Source_KPI_Definition__c</errorDisplayField>
        <errorMessage>The Source KPI Definition must have Record Type &apos;Editable&apos; and Edit Mode &apos;Total&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__SourceKPI_NotEmpty</fullName>
        <active>true</active>
        <description>The Source KPI Definition field can’t be empty.</description>
        <errorConditionFormula>ISBLANK(ACCL__Source_KPI_Definition__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Source_KPI_Definition__c</errorDisplayField>
        <errorMessage>The Source KPI Definition field can’t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__SourceKPI_Scope</fullName>
        <active>true</active>
        <description>The Source KPI Definition must have Object Scope ‘Promotion Tactic’.</description>
        <errorConditionFormula>NOT(ISPICKVAL(ACCL__Source_KPI_Definition__r.ACCL__Scope__c, &apos;promotiontactic&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Source_KPI_Definition__c</errorDisplayField>
        <errorMessage>The Source KPI Definition must have Object Scope ‘Promotion Tactic’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__SourceKpi_CompatibleToProductLevel</fullName>
        <active>true</active>
        <description>The BOM Scope of Source KPI Definition must contain ‘Component’ if Product Level is ‘Component’.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(ACCL__Product_Level__c, &apos;Component&apos;),
    NOT(INCLUDES(ACCL__Source_KPI_Definition__r.ACCL__BoM_Scope__c, &apos;Component&apos;))
)</errorConditionFormula>
        <errorDisplayField>ACCL__Source_KPI_Definition__c</errorDisplayField>
        <errorMessage>The BOM Scope of Source KPI Definition must contain ‘Component’ if Product Level is ‘Component’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Targets_CheckMaintenanceBeforeUpdate</fullName>
        <active>true</active>
        <description>The Targets field can be changed after creation only if Maintenance field is set to &apos;Initial&apos;.</description>
        <errorConditionFormula>AND(
  NOT(ISPICKVAL(ACCL__Maintenance__c,&apos;Initial&apos;)),
  ISCHANGED(ACCL__Targets__c)
)</errorConditionFormula>
        <errorDisplayField>ACCL__Targets__c</errorDisplayField>
        <errorMessage>The Targets field can be changed after creation only if Maintenance field is set to &apos;Initial&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Targets_ExternalMandatory</fullName>
        <active>true</active>
        <description>External is mandatory.</description>
        <errorConditionFormula>NOT(INCLUDES(ACCL__Targets__c, &apos;External&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Targets__c</errorDisplayField>
        <errorMessage>External is mandatory.</errorMessage>
    </validationRules>
</CustomObject>